--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .clip_path {
+        clip-path: polygon(50% 0%, 100% 0, 100% 80%, 51% 100%, 0 80%, 0% 60%, 0 0);
+    }
+
+    .heading {
+        @apply text-[30px] md:text-[30px] lg:text-[45px] xl:text-[50px] uppercase font-bold text-gray-900 md:leading-[4rem] leading-[3rem] text-center;
+    }
+}
+
+
+input[type="date"]::-webkit-calender-picker-indicator{
+    filter: invert(1);
+}
+
+input[type="time"]::-webkit-calender-picker-indicator{
+    filter: invert(1);
+}
+
+input[type="time"]::-webkit-calender-picker-indicator::after{
+    filter: invert(1);
+}
